2000-08-11  Michael Meeks  <michael@helixcode.com>

	* container.c (final_setup): make dependent on environment
	variable: BONOBO_MONIKER_TEST

2000-08-10  Michael Meeks  <michael@helixcode.com>

	* component.c (sample_site_add_frame): publicize and rename
	to (sample_client_site_add_frame): this. (add_frame_cb): upd.

	* container.c (sample_app_add_component): split part into
	(sample_app_add_embeddable): here, and publicize.
	(sample_app_add_embeddable): add a frame.

2000-08-09  Michael Meeks  <michael@helixcode.com>

	* container.c (final_setup): add moniker test code.

	* component.c (load_stream_cb): txt -> text.

2000-08-02  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_exit): unref the UI handler here.
	(sample_app_shutdown, main): kill this kludge, this is now fixed
	in the UIHandler code.

2000-07-26  Michael Meeks  <michael@helixcode.com>

	* container-io.c (STORAGE_TYPE): change to efs.

2000-07-23  Michael Meeks  <michael@helixcode.com>

	* Massive clean, rename, re-write huge chunks, everything is now
	officialy my fault.

	* container-print.c (sample_app_print_preview): allow each component
	a larger, square space to render to.

	* container-menu.c: Prune all GUI conditionals, you just need to
	save a compound document and use it on startup to get this effect.
	(add_cb): use gnome_bonobo_select_id
	(about_cb): update authors / copyright.

	* container.c (sample_app_remove_component): don't do more work than
	neccessary, don't container_remove, just destroy the containing widget.
	Move into:
	
	* component.c (component_del): where it belongs.

2000-07-13  Michael Meeks  <michael@helixcode.com>

	* container-print.c (sample_app_print_preview): kill unref of print
	preview widget, and also context.

	* component.c (load_stream_cb): update to show exception nicely.

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_shutdown): unref the ui_handler.