@@ -135,32 +135,18 @@ bonobo_clock_factory_init (void)
 	if (bonobo_clock_control_factory != NULL)
 		return;
 
-#if USING_OAF
 	bonobo_clock_control_factory =
 		bonobo_generic_factory_new (
 			"OAFIID:bonobo_clock_factory:ec4961f3-7a16-4ace-9463-b112e4bc4186",
 			bonobo_clock_factory, NULL);
-#else
-	bonobo_clock_control_factory =
-		bonobo_generic_factory_new (
-			"control-factory:clock",
-			bonobo_clock_factory, NULL);
-#endif
 
 	if (bonobo_clock_control_factory == NULL)
 		g_error ("I could not register a BonoboClock factory.");
 
-#if USING_OAF
 	bonobo_entry_control_factory =
 		bonobo_generic_factory_new (
 			"OAFIID:bonobo_entry_factory:ef3e3c33-43e2-4f7c-9ca9-9479104608d6",
 			bonobo_entry_factory, NULL);
-#else
-	bonobo_entry_control_factory =
-		bonobo_generic_factory_new (
-			"control-factory:entry",
-			bonobo_entry_factory, NULL);
-#endif
 
 	if (bonobo_entry_control_factory == NULL)
 		g_error ("I could not register an Entry factory.");
